# junction-2024

./: .gitignore  README.md
backend/: detect_edges.py  pyproject.toml  requirements.txt  run.sh
backend/backend/: floor.py  main.py  models.py  numpy-to-glb.py  numpy_to_glb.py  process.py  schemas.py  svg-to-glb.py
backend/backend/db/: db.py  items.py
backend/backend/routes/: file.py  floor.py  house.py  items.py  object3d.py  processing.py
backend/migrations/: env.py
backend/migrations/versions/: af76212973a6_.py
backend/numpy-to-glb/: numpy-to-glb.py  requirments.txt
backend/svg-to-glb/: requirments.txt  test.glb
frontend/: .pnp.cjs  .prettierrc  package-lock.json  package.json  tailwind.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/3D/: CssObject.svelte  Exporter.svelte  Floor.svelte  Label.svelte  Object.svelte  Preview.svelte  ViewScene.svelte  cachedUrl.ts
frontend/src/lib/3D/edit/: EditFloor.svelte  EditObject.svelte  EditScene.svelte
frontend/src/lib/api/: files.ts  floors.ts  house.ts  index.ts  object3d.ts  objectTemplates.ts
frontend/src/lib/components/basics/: Button.svelte
frontend/src/lib/indexdb/: index.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/[uuid]/: +page.svelte  +page.ts
frontend/src/routes/[uuid]/[floor_uuid]/: +page.svelte  +page.ts  ObjectTemplate.svelte
frontend/src/routes/[uuid]/edit/: +page.svelte  +page.ts
frontend/src/routes/add-house/: +page.svelte
frontend/static/: eletric_box.glb  eletrical.glb  elevator.glb  escalator.glb  test-7.glb
